--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,11 @@ services:
     image: "redis:alpine"
     ports:
       - "6379:6379"
+  swagger:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "8080:8080"
+    environment:
+      SWAGGER_JSON: /api/openapi.yaml
+    volumes:
+      - ./openapi.yaml:/api/openapi.yaml
